markers at night + fix clipping on left/right in daylight

--- a/client/src/components/daylight/Daylight.module.css
+++ b/client/src/components/daylight/Daylight.module.css
@@ -103,15 +103,14 @@
 .horizonSky {
     height: 260px;
     padding-top: 3.5rem;
-    /* Changed from hidden to allow work hour markers to extend below horizon */
-    overflow: visible;
+    overflow: hidden; /* Hidden to ensure sun/moon sets "behind" the ground */
 }
 
 .horizonSkyWrap {
     height: 100%;
-    width: calc(100% - 2rem);
-    margin-left: 1rem;
-    margin-right: 1rem;
+    width: calc(100% - 5rem);
+    margin-left: 2.5rem;
+    margin-right: 2.5rem;
     position: relative;
 }
 
@@ -159,7 +158,7 @@
 
 .horizonLine {
     border-top: 1px solid;
-    padding-top: 0.5rem;
+    padding: 0.5rem 1rem 0;
     display: flex;
     justify-content: space-between;
     position: relative;
